--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
-import Layout from "../layouts/Layout.astro";
-import Hero from "../components/Hero.astro";
-import SignatureServices from "../components/SignatureServices.astro";
+import Layout from "../layouts/layout.astro";
+import Hero from "../components/hero.astro";
+import SignatureServices from "../components/signatureservices.astro";
 ---
 
 <Layout>
